{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 85,
  "lineage": "f374eeef-a34b-1d8c-de4f-b16378b77a9d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pennyearned_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02238ac43d6385ab3",
            "arn": "arn:aws:ec2:us-east-2:754150314237:instance/i-0a34ab41abce8d5bd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a34ab41abce8d5bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "pennyearned_database_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0232a5abb1da5d850",
            "private_dns": "ip-10-0-45-226.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.45.226",
            "public_dns": "ec2-3-145-75-208.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.75.208",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01fe0e6da30c9d26e",
                "volume_size": 15,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00365c628e63ca527",
              "sg-051e487da4931ac5f",
              "sg-0d79d7a4b7dd5f0c8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026c5851783c0037e",
            "tags": {
              "Name": "PennyearnedDatabaseInstace"
            },
            "tags_all": {
              "Name": "PennyearnedDatabaseInstace"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00365c628e63ca527",
              "sg-051e487da4931ac5f",
              "sg-0d79d7a4b7dd5f0c8"
            ]
          },
          "dependencies": [
            "aws_security_group.ingress-all-pennyearned-database",
            "aws_security_group.ingress-postgres-database",
            "aws_security_group.ingress-redis-database",
            "aws_subnet.pennyearned-database-subnet",
            "aws_vpc.pennyearned-database-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pennyearned-database-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:754150314237:internet-gateway/igw-03122108961206da2",
            "id": "igw-03122108961206da2",
            "owner_id": "754150314237",
            "tags": {
              "Name": "pennyearned-database-gw"
            },
            "tags_all": {
              "Name": "pennyearned-database-gw"
            },
            "vpc_id": "vpc-00197ed26eeef94c1"
          },
          "dependencies": [
            "aws_vpc.pennyearned-database-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-pennyearned-database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:754150314237:route-table/rtb-0e5dea48f3b4140fa",
            "id": "rtb-0e5dea48f3b4140fa",
            "owner_id": "754150314237",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03122108961206da2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-pennyearned-database"
            },
            "tags_all": {
              "Name": "route-table-pennyearned-database"
            },
            "timeouts": null,
            "vpc_id": "vpc-00197ed26eeef94c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pennyearned-database-gw",
            "aws_vpc.pennyearned-database-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pennyearned-database-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b82c54c993fa5ecb",
            "route_table_id": "rtb-0e5dea48f3b4140fa",
            "subnet_id": "subnet-026c5851783c0037e"
          },
          "dependencies": [
            "aws_internet_gateway.pennyearned-database-gw",
            "aws_route_table.route-table-pennyearned-database",
            "aws_subnet.pennyearned-database-subnet",
            "aws_vpc.pennyearned-database-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all-pennyearned-database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:754150314237:security-group/sg-0d79d7a4b7dd5f0c8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d79d7a4b7dd5f0c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all-sg",
            "name_prefix": "",
            "owner_id": "754150314237",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00197ed26eeef94c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pennyearned-database-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-postgres-database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:754150314237:security-group/sg-00365c628e63ca527",
            "description": "The rule to allow connections to the db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00365c628e63ca527",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "allow-all-postgres",
            "name_prefix": "",
            "owner_id": "754150314237",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00197ed26eeef94c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pennyearned-database-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-redis-database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:754150314237:security-group/sg-051e487da4931ac5f",
            "description": "The rule to allow connections to redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051e487da4931ac5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "allow-all-redis",
            "name_prefix": "",
            "owner_id": "754150314237",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00197ed26eeef94c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pennyearned-database-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pennyearned-database-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:754150314237:subnet/subnet-026c5851783c0037e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026c5851783c0037e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "754150314237",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00197ed26eeef94c1"
          },
          "dependencies": [
            "aws_vpc.pennyearned-database-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pennyearned-database-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:754150314237:vpc/vpc-00197ed26eeef94c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01e07e0d3338b75ef",
            "default_route_table_id": "rtb-0028d066b66c292e3",
            "default_security_group_id": "sg-0752ae006f0c09bec",
            "dhcp_options_id": "dopt-0f98c03e0c716cff0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00197ed26eeef94c1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0028d066b66c292e3",
            "owner_id": "754150314237",
            "tags": {
              "Name": "pennyearned-database-vpc"
            },
            "tags_all": {
              "Name": "pennyearned-database-vpc"
            }
          }
        }
      ]
    }
  ]
}